Fixed invisible (overflowed) outline inside opened gallery

--- a/view/frontend/web/css/source/abstracts/_mixins.less
+++ b/view/frontend/web/css/source/abstracts/_mixins.less
@@ -65,3 +65,5 @@
         }
     }
 }
+
+.breeze-focus-ring() {}
