--- a/view/frontend/web/css/source/components/_gallery.less
+++ b/view/frontend/web/css/source/components/_gallery.less
@@ -314,6 +314,10 @@
                 }
             }
 
+            &:has(.main-image-wrapper:focus-visible) {
+                .breeze-focus-ring();
+            }
+
             > div:first-child {
                 &,
                 picture {
